# app/api/sites/[id]/documents/[documentId]/content/route.ts
@@ -1,0 +1,1 @@
+export { putSiteDocumentContentRoute as PUT, getSiteDocumentContentRoute as GET } from "@/backend";
